# simmonitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: debian-package.yml
.github/workflows/: ci.yaml  cmake-single-platform.yml  debian-package.yml
conf/: simmonitordb.config  simmonitorui.config
data/: base.tmpl  simmonitor-psql.sql  simmonitor-sqlite.sql  simscript.js  simstyle.css  singleplotmultiplelapsx11.gp
examples/web/: simmonitorweb.flags.config  simmonitorweb.simdash1.config
examples/web/simdash1/: base.tmpl  simscript.js  simstyle.css
examples/web/simflags/: simscript.js
examples/web/simrelatime/: base.tmpl  simscript.js  simstyle.css
src/simmonitor/: simmonitor.c
src/simmonitor/db/: CMakeLists.txt  hoeldb.c  hoeldb.h
src/simmonitor/gameloop/: CMakeLists.txt  browseloop.c  browseloop.h  gameloop.c  gameloop.h  loopdata.h
src/simmonitor/helper/: CMakeLists.txt  confighelper.c  confighelper.h  dirhelper.c  dirhelper.h  iohelper.c  iohelper.h  parameters.c  parameters.h
src/simmonitor/simulatorapi/: CMakeLists.txt
src/simmonitor/telemetry/: CMakeLists.txt  telemetry.c  telemetry.h  telemmonitor.c  telemmonitor.h
src/simmonitor/ui/: CMakeLists.txt  lv_conf.h  lvgui.c  lvgui.h  lvhelper.c  lvhelper.h  ncursesui.c  ncursesui.h  simfb.c  simfb.h  simwebui.c  simwebui.h  xgui.c  xgui.h
tests/: test_invariant_hoeldb.c
tools/distro/arch/git/: PKGBUILD
tools/distro/arch/stable/: PKGBUILD
tools/distro/debian/dpkg/debian-latest/: control
tools/distro/debian/dpkg/debian-stable/: control
tools/distro/debian/dpkg/ubuntu-latest/: control
tools/distro/fedora/rpm/: fedora.spec
